--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "^1.4.4",
     "dayjs": "^1.8.17",
     "express": "^4.17.1",
+    "express-art-template": "^1.0.1",
     "multer": "^1.4.2",
     "mysql": "^2.17.1"
   },
