node.js 本地服务配置IP访问及自动生成二维码

--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "start": "nodemon server.js",
     "web": "nodemon /web/server.js",
     "client": "nodemon /web/client.js",
+    "comment": "nodemon comment/app.js",
     "apache": "nodemon Apache/server/server.js",
-    "comment": "nodemon comment/app.js"
+    "local": "nodemon Apache/www/server.js"
   },
   "author": "twoyoung",
   "license": "ISC"
